# 3d-mesh-inspector

./: run.sh
assets/: b21vdWIPRsa.stl
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
web/: .pnp.cjs  index.js  package.json  webpack.config.js
